--- a/小和甜酒全集/menu.html
+++ b/小和甜酒全集/menu.html
@@ -15,7 +15,7 @@
   <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-%E9%B8%AD%E9%B8%AD%E5%B9%BC%E7%A8%9A%E5%9B%AD-170P2V-08-21">小和甜酒 鸭鸭幼稚园 170P2V</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-%E4%BA%A4%E9%94%99%E6%88%98%E7%BA%BF%E7%BB%AF%E4%BF%90-47P2V-08-21">小和甜酒 交错战线绯俐 47P2V</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-%E5%A6%83%E5%92%B2-195P1V-08-21">小和甜酒 妃咲 195P1V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-Kasumisawa-Miyu-cos-b12-08-21">小和甜酒 Kasumisawa Miyu cos b12</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
