--- a/雪晴Astra全集/menu.html
+++ b/雪晴Astra全集/menu.html
@@ -27,7 +27,7 @@
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E5%88%BB%E6%99%B4%E6%81%B6%E9%AD%94%E6%8B%98%E6%9D%9F%E7%9D%A1%E8%A1%A3-20P4V-349MB-08-21">雪晴Astra - 刻晴恶魔拘束睡衣 [20P4V-349MB]</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---2024%E6%98%A5%E5%AD%A3%E9%99%90%E5%AE%9A-%E9%80%8F%E6%98%8E%E5%A5%B3%E4%BB%86-71P2V-195GB-08-21">雪晴Astra - 2024春季限定 透明女仆 [71P2V-1.95GB]</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E9%87%91%E6%9E%9D%E7%8E%89%E5%8F%B6-82P-10V-08-21">雪晴Astra - 金枝玉叶 [82P 10V]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra-%E5%BD%BC%E5%A5%B3%E3%81%AE%E6%97%A5%E5%B8%B8-127P13V-08-21">雪晴Astra 彼女の日常 127P13V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
