--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <p><a href="./奶桃桃全集/menu.html">奶桃桃全集</a></p> 
   <p><a href="./如月灰全集/menu.html">如月灰全集</a></p> 
   <p><a href="./安食Ajiki全集/menu.html">安食Ajiki全集</a></p> 
-  <p><a href="./宮本桜全集/menu.html">宮本桜全集</a></p> 
+  <p><a href="./宮本桜(宫本桜)全集/menu.html">宮本桜(宫本桜)全集</a></p> 
   <p><a href="./封疆疆全集/menu.html">封疆疆全集</a></p> 
   <p><a href="./小仓千代w全集/menu.html">小仓千代w全集</a></p> 
   <p><a href="./小和甜酒全集/menu.html">小和甜酒全集</a></p> 
