--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -44,6 +44,12 @@
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E7%97%B4%E5%A5%B3%E6%97%A5%E8%AE%B0-104P-098GB-08-21">玉汇 - 痴女日记 [104P-0.98GB]</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Set-A---Tifa-Dress-08-21">玉汇 Set A - Tifa Dress</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Set-B---Gymnastics-Girl-08-21">玉汇 Set B - Gymnastics Girl</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87-%E7%94%B5%E6%A2%AF%E9%97%B4-%E5%B0%BE%E8%A1%8C154p1v975M-08-21">yuuhui玉汇 电梯间-尾行(154p+1v)(975M)</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Set-A-%E8%93%9D%E5%85%94-Blue-Bunny--42P1V-08-21">玉汇 Set A 蓝兔 Blue Bunny [ 42P+1V ]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Set-B-S%E7%BA%A7%E9%AD%85%E9%AD%94-Succubus-S--42P2V-08-21">玉汇 Set B S级魅魔 Succubus S [ 42P+2V ]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
