--- a/七月喵子全集/menu.html
+++ b/七月喵子全集/menu.html
@@ -14,8 +14,8 @@
   <p><a href="https://telegra.ph/%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90---%E8%90%8D%E8%90%8D-80P-111GB-08-20">七月喵子 - 萍萍 [80P-1.11GB]</a></p>
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E5%A4%8F%E6%97%A5-130P1V-219GB-08-21">云溪溪 - &奶桃&奈汐酱nice&七月喵子 夏日 [130P1V-2.19GB]</a></p>
   <p><a href="https://telegra.ph/%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E8%9B%8B%E7%B3%95%E5%8E%A8%E5%A8%98-60P-08-21">七月喵子 蛋糕厨娘 60P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E9%BB%91%E5%85%94%E4%B8%9D-08-21">七月喵子 黑兔丝</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E6%AD%BB%E4%B9%8B%E5%AE%AB%E7%8E%AF%E5%A5%88-08-21">七月喵子 死之宫环奈</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
