--- a/桃良阿宅全集/menu.html
+++ b/桃良阿宅全集/menu.html
@@ -17,5 +17,10 @@
   <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E7%89%B9%E8%AE%AD-55P-08-21">桃良阿宅 特训 55P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E5%A4%96%E5%87%BAJK-43P-08-21">桃良阿宅 外出JK 43P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E5%B9%B4%E5%B9%B4%E6%9C%89%E9%B1%BC-35P-08-21">桃良阿宅 年年有鱼 35P</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E8%93%9D%E8%89%B2%E6%AF%94%E5%9F%BA%E5%B0%BC-67P-08-21">桃良阿宅 蓝色比基尼 67P</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E5%A5%B3%E4%BB%86%E7%9A%84%E5%B0%8F%E6%86%A9-52P-08-21">桃良阿宅 女仆的小憩 52P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
