--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -32,8 +32,8 @@
   <p><a href="https://telegra.ph/%E5%A4%8F%E5%A4%8F%E5%AD%90-%E7%A7%81%E6%88%BF36Natsuko%E6%9C%A6%E8%83%A7OL-08-21">夏夏子 私房36【Natsuko】朦胧OL</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E6%BC%86%E9%BB%91%E5%A5%B3%E4%BB%86-50P-439MB-08-21">Natsuko夏夏子 - 漆黑女仆 [50P-439MB]</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%85%AB%E9%87%8D%E7%A5%9E%E5%AD%90-91P-618MB%E5%8E%9F%E7%A5%9E-08-21">Natsuko夏夏子 - 八重神子 [91P-618MB](原神)</a></p>
-<p><a href="../index.html">返回总目录</a></p>
-<p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E6%B8%85%E7%A7%8B57P1V-08-21">Natsuko夏夏子 清秋57P1V</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E8%B5%9B%E5%8D%9A%E6%9C%8B%E5%85%8B%E8%BE%B9%E7%BC%98%E8%A1%8C%E8%80%85Lucy-61P-08-21">Natsuko夏夏子 赛博朋克边缘行者Lucy 61P</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
