--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -26,7 +26,7 @@
   <p><a href="https://telegra.ph/Byoru---Mary-Bunny-63P19V-08-21">Byoru - Mary Bunny 63P+19V</a></p>
   <p><a href="https://telegra.ph/Byoru---Nicole-58P15V-08-21">Byoru - Nicole 58P15V</a></p>
   <p><a href="https://telegra.ph/Byoru---Albedo-47P16V-08-21">Byoru - Albedo 47P16V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Byoru-Queen-Marika%E7%8E%9B%E4%B8%BD%E5%8D%A1%E5%A5%B3%E7%8E%8B%E8%89%BE%E5%B0%94%E7%99%BB%E6%B3%95%E7%8E%AF61p17v-08-21">Byoru Queen Marika玛丽卡女王（艾尔登法环）[61p17v]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
