--- a/二佐Nisa全集/menu.html
+++ b/二佐Nisa全集/menu.html
@@ -10,11 +10,9 @@
   <p><a href="https://telegra.ph/%E4%BA%8C%E4%BD%90Nisa---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%A4%A7%E5%87%A4%E5%85%94%E5%A5%B3%E9%83%8E-108P1V-1G-08-20">二佐Nisa - 碧蓝航线 大凤兔女郎 [108P1V-1G]</a></p> 
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E4%BA%8C%E4%BD%90Nisa---%E9%BB%91%E7%B4%AB%E8%95%BE%E4%B8%9D%E5%A5%97-30p-2v-08-20">九曲Jean 二佐Nisa - 黑紫蕾丝套 30p 2v</a></p>
   <p><a href="https://telegra.ph/%E4%BA%8C%E4%BD%90Nisa---%E7%99%BD%E7%8C%AB%E8%87%AA%E6%8B%8D20-30P2V-135GB-08-21">二佐Nisa - 白猫自拍2.0 [30P2V-1.35GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%8C%E4%BD%90Nisa-%E7%8E%89%E8%97%BB%E5%89%8D%E8%88%9E%E5%A8%982-37P-08-21">二佐Nisa 玉藻前舞娘2 37P</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%8C%E4%BD%90Nisa-%E4%BA%A4%E9%94%99%E6%88%98%E7%BA%BF-%E5%8D%A1%E6%8F%90%E9%82%A3-36P-08-21">二佐Nisa 交错战线 卡提那 36P</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%8C%E4%BD%90Nisa-%E5%B0%8F%E9%AD%85%E9%AD%94%E7%AB%9E%E6%B3%B3-36P-08-21">二佐Nisa 小魅魔竞泳 36P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
