--- a/云溪溪奶桃桃全集/menu.html
+++ b/云溪溪奶桃桃全集/menu.html
@@ -24,8 +24,8 @@
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E5%A4%8F%E6%97%A5-130P1V-219GB-08-21">云溪溪 - &奶桃&奈汐酱nice&七月喵子 夏日 [130P1V-2.19GB]</a></p>
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83-%E7%B9%81%E8%8A%B1-130P3V-191GB-08-21">云溪溪 - 奶桃 繁花 [130P3V-1.91GB]</a></p>
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice-%E5%8D%B1%E9%99%A9%E6%B8%B8%E6%88%8F-132P1V-08-21">云溪溪 - 奶桃桃&奈汐酱nice 危险游戏 132P1V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA-%E5%A5%B6%E6%A1%83-%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E4%B9%8B%E6%BF%91%E6%98%8E%E6%97%A5%E5%A5%88100P-08-21">云溪溪 奶桃 蔚蓝档案 之濑明日奈100P</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA-%E5%A5%B6%E6%A1%83%E6%A1%83-%E7%8B%97%E7%8B%9760-76P-08-21">云溪溪 奶桃桃 狗狗6.0 76P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
