--- a/安食Ajiki全集/menu.html
+++ b/安食Ajiki全集/menu.html
@@ -10,5 +10,10 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%A4%A7%E5%87%A4JK-08-19">安食Ajiki - 碧蓝航线 大凤JK</a></p> 
+  <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki-%E5%BC%82%E7%9E%B3%E5%B0%8F%E9%AD%85%E9%AD%94-22P-08-21">安食Ajiki 异瞳小魅魔 22P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
