--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -30,7 +30,7 @@
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E8%83%A1%E6%BB%95%E8%B5%9B%E8%BD%A6-41P-08-21">屿鱼 碧蓝航线 胡滕赛车 41P</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E7%BB%98%E7%94%BB%E5%8F%82%E8%80%83-84P-08-21">屿鱼 绘画参考 84P</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E6%AF%92%E8%9B%87%E5%85%94%E5%A5%B3%E9%83%8E-66P-08-21">屿鱼 毒蛇兔女郎 66P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E5%A5%B3%E4%BB%86-08-21">屿鱼 女仆</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
