--- a/是三不是世w全集/menu.html
+++ b/是三不是世w全集/menu.html
@@ -10,8 +10,8 @@
   <p><a href="https://telegra.ph/%E6%98%AF%E4%B8%89%E4%B8%8D%E6%98%AF%E4%B8%96w---%E5%B0%8F%E8%80%81%E8%99%8E-101P-139GB-08-20">是三不是世w - 小老虎 [101P-1.39GB]</a></p>
   <p><a href="https://telegra.ph/%E6%98%AF%E4%B8%89%E4%B8%8D%E6%98%AF%E4%B8%96w---FGO-%E9%85%92%E5%90%9E%E7%AB%A5%E5%AD%90-35P-150GB-08-20">是三不是世w - FGO 酒吞童子 [35P-1.50GB]</a></p>
   <p><a href="https://telegra.ph/%E6%98%AF%E4%B8%89%E4%B8%8D%E6%98%AF%E4%B8%96w-%E5%96%9C%E5%A4%9A%E5%B7%9D%E6%B5%B7%E6%A2%A6%E9%BB%91%E5%B1%B1%E6%A2%97%E8%8F%9C-45P-08-21">是三不是世w 喜多川海梦黑山梗菜 45P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%98%AF%E4%B8%89%E4%B8%8D%E6%98%AF%E4%B8%96w-%E5%96%9C%E5%A4%9A%E5%B7%9D%E6%B5%B7%E6%A2%A6-25P-08-21">是三不是世w 喜多川海梦 25P</a></p>
+  <p><a href="https://telegra.ph/%E6%98%AF%E4%B8%89%E4%B8%8D%E6%98%AF%E4%B8%96w-%E6%97%A5%E5%BC%8F%E5%B0%8F%E8%83%8C%E5%B8%A6-25P-08-21">是三不是世w 日式小背带 25P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
