--- a/神沢永莉全集/menu.html
+++ b/神沢永莉全集/menu.html
@@ -9,10 +9,10 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E4%B9%A0%E5%91%86%E5%91%86---20240716-%E6%97%B6%E9%9B%A8%E9%9B%A8%E8%A1%A3-08-20">习呆呆 - 2024.07.16 时雨雨衣</a></p>
-  <p><a href="https://telegra.ph/%E4%B9%A0%E5%91%86%E5%91%86-Ellen-Joe-%E8%89%BE%E8%8E%B2%E4%B9%94-18P1V-08-21">习呆呆 Ellen Joe 艾莲·乔 18P1V</a></p>
+  <p><a href="https://telegra.ph/%E7%A5%9E%E6%B2%A2%E6%B0%B8%E8%8E%89-%E9%A6%99%E8%8D%89%E8%8A%8B%E6%B3%A5-87P4V-445MB-08-21">神沢永莉 香草芋泥 [87P4V-445MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
