--- a/麻花酱全集/menu.html
+++ b/麻花酱全集/menu.html
@@ -24,11 +24,12 @@
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E9%AC%BC%E7%81%AD%E4%B9%8B%E5%88%83-%E7%94%98%E9%9C%B2%E5%AF%BA-22P1V-395MB-08-21">麻花酱 - 鬼灭之刃 甘露寺 [22P1V-395MB]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%9F%83%E5%90%89%E5%B0%94-28P1V-439MB-08-21">麻花酱 - 碧蓝航线 埃吉尔 [28P1V-439MB]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E9%97%B4%E8%B0%8D%E8%BF%87%E5%AE%B6%E5%AE%B6-%E7%BA%A6%E5%B0%9445P3V-08-21">麻花酱 间谍过家家 约尔45P3V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-OL%E7%99%BD%E8%A1%AC%E8%A1%AB%E5%A7%90%E5%A7%90-40P1V-08-21">麻花酱 OL白衬衫姐姐 40P1V</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-OL%E5%8A%9E%E5%85%AC%E5%AE%A4%E5%A5%B3%E4%B8%8A%E5%8F%B8-42P2V-08-21">麻花酱 OL办公室女上司 42P2V</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E9%A2%84%E7%BA%A6%E8%B5%A0%E7%A4%BC-08-21">麻花酱 预约赠礼</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E6%B3%B3%E8%A3%85%E6%AF%94%E5%9F%BA%E5%B0%BC-08-21">麻花酱 泳装比基尼</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E4%B8%9D%E5%B8%A6%E5%A5%B3%E4%BB%86-42P1V-08-21">麻花酱 丝带女仆 42P1V</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%BA%BB%E8%8A%B1%E9%85%B1-%E6%B1%A4%E5%B1%8B%E5%A5%B3%E4%BB%8639P1V-08-21">麻花麻花酱 汤屋女仆39P1V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
