--- a/小和甜酒全集/menu.html
+++ b/小和甜酒全集/menu.html
@@ -16,6 +16,10 @@
   <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-%E4%BA%A4%E9%94%99%E6%88%98%E7%BA%BF%E7%BB%AF%E4%BF%90-47P2V-08-21">小和甜酒 交错战线绯俐 47P2V</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-%E5%A6%83%E5%92%B2-195P1V-08-21">小和甜酒 妃咲 195P1V</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-Kasumisawa-Miyu-cos-b12-08-21">小和甜酒 Kasumisawa Miyu cos b12</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92%E6%A9%99%E9%A3%8E%E5%8D%83%E9%9B%85-%E6%98%8E%E6%97%A5%E6%96%B9%E8%88%9F%E5%B9%B4%E5%A4%95%E6%97%97%E8%A2%8D%E5%8F%8C%E4%BA%BA%E5%BE%A1%E5%AE%88-199P-08-21">小和甜酒&橙风千雅 明日方舟年夕旗袍双人御守 199P 1</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92%E6%A9%99%E9%A3%8E%E5%8D%83%E9%9B%85-%E6%98%8E%E6%97%A5%E6%96%B9%E8%88%9F%E5%B9%B4%E5%A4%95%E6%97%97%E8%A2%8D%E5%8F%8C%E4%BA%BA%E5%BE%A1%E5%AE%88-199P-08-21-2">小和甜酒&橙风千雅 明日方舟年夕旗袍双人御守 199P 2</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
