--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -31,7 +31,7 @@
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E7%BB%98%E7%94%BB%E5%8F%82%E8%80%83-84P-08-21">屿鱼 绘画参考 84P</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E6%AF%92%E8%9B%87%E5%85%94%E5%A5%B3%E9%83%8E-66P-08-21">屿鱼 毒蛇兔女郎 66P</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E5%A5%B3%E4%BB%86-08-21">屿鱼 女仆</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-toki%E5%85%94%E5%A5%B3%E9%83%8E-28P-08-21">屿鱼 蔚蓝档案 toki兔女郎 28P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
