--- a/桜桃喵全集/menu.html
+++ b/桜桃喵全集/menu.html
@@ -14,5 +14,9 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5---%E6%95%99%E5%AE%A4%E6%AD%BB%E5%BA%93%E6%B0%B4-08-19">桜桃喵 - 教室死库水</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5---%E7%A4%BC%E7%89%A9-40P-34203MB-08-20">桜桃喵 - 礼物 [40P-342.03MB]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5---%E9%80%90%E6%B8%90%E5%8D%87%E6%B8%A9-37P2V-645MB-08-20">桜桃喵 - 逐渐升温 [37P2V-645MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E5%B0%8F%E6%9C%88%E5%85%89-45P-43172MB-08-21">桜桃喵 小月光 [45P-431.72MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
