--- a/橙风千雅全集/menu.html
+++ b/橙风千雅全集/menu.html
@@ -10,8 +10,8 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92%E6%A9%99%E9%A3%8E%E5%8D%83%E9%9B%85-%E9%AD%94%E5%A5%B3%E7%8C%AB%E5%92%AA-118P-751MB-08-21">小和甜酒&橙风千雅 魔女猫咪 [118P-751MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92%E6%A9%99%E9%A3%8E%E5%8D%83%E9%9B%85-%E6%98%8E%E6%97%A5%E6%96%B9%E8%88%9F%E5%B9%B4%E5%A4%95%E6%97%97%E8%A2%8D%E5%8F%8C%E4%BA%BA%E5%BE%A1%E5%AE%88-199P-08-21">小和甜酒&橙风千雅 明日方舟年夕旗袍双人御守 199P 1</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92%E6%A9%99%E9%A3%8E%E5%8D%83%E9%9B%85-%E6%98%8E%E6%97%A5%E6%96%B9%E8%88%9F%E5%B9%B4%E5%A4%95%E6%97%97%E8%A2%8D%E5%8F%8C%E4%BA%BA%E5%BE%A1%E5%AE%88-199P-08-21-2">小和甜酒&橙风千雅 明日方舟年夕旗袍双人御守 199P 2</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
