--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -34,8 +34,8 @@
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%85%AB%E9%87%8D%E7%A5%9E%E5%AD%90-91P-618MB%E5%8E%9F%E7%A5%9E-08-21">Natsuko夏夏子 - 八重神子 [91P-618MB](原神)</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E6%B8%85%E7%A7%8B57P1V-08-21">Natsuko夏夏子 清秋57P1V</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E8%B5%9B%E5%8D%9A%E6%9C%8B%E5%85%8B%E8%BE%B9%E7%BC%98%E8%A1%8C%E8%80%85Lucy-61P-08-21">Natsuko夏夏子 赛博朋克边缘行者Lucy 61P</a></p>
-<p><a href="../index.html">返回总目录</a></p>
-<p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E9%BE%99%E5%B9%B4%E6%96%B0%E6%98%A5-45P-08-21">Natsuko夏夏子 龙年新春 45P</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E7%86%8A%E7%8C%AB%E5%A5%B3%E4%BB%8664P1V-08-21">Natsuko夏夏子 熊猫女仆64P1V</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
