--- a/日奈娇全集/menu.html
+++ b/日奈娇全集/menu.html
@@ -17,6 +17,11 @@
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E5%9C%B0%E9%93%81OL-287P8V-340GB-08-21">日奈娇 地铁OL [287P8V-3.40GB]</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E6%9B%B4%E8%A1%A3%E5%AE%A4-195P-08-21">日奈娇 更衣室 195P</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E5%A4%9C%E8%89%B2%E9%99%8D%E4%B8%B4-61P1V-08-21">日奈娇 夜色降临 61P1V</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E6%96%B0%E5%A9%9A-100P5V-08-21">日奈娇 新婚 100P5V</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%BE%8E%E6%9C%AF%E7%94%9F-129P5V-08-21">日奈娇 美术生 129P5V</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E8%8A%B1%E9%AD%81%E7%8B%90%E5%A6%96-08-21">日奈娇 花魁狐妖</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E6%B5%B7%E5%86%9B%E5%B0%91%E5%A5%B3-83P2V-08-21">日奈娇 海军少女 83P2V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
