--- a/贝贝琪Becky全集/menu.html
+++ b/贝贝琪Becky全集/menu.html
@@ -11,7 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E8%B4%9D%E8%B4%9D%E7%90%AABecky---%E7%A2%A7%E6%B1%A0%E7%88%B1%E6%8A%96%E9%9C%B2-40P2V-294MB-08-20">贝贝琪Becky - 碧池爱抖露 [40P2V-294MB]</a></p>
   <p><a href="https://telegra.ph/%E8%B4%9D%E8%B4%9D%E7%90%AABecky---%E5%90%8A%E5%B8%A6%E8%A3%99-08-21">贝贝琪Becky - 吊带裙</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%B4%9D%E8%B4%9D%E7%90%AABecky-%E6%8B%89%E6%AF%97-40P1V-08-21">贝贝琪Becky 拉毗 40P1V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
