--- a/rua阮阮全集/menu.html
+++ b/rua阮阮全集/menu.html
@@ -13,7 +13,7 @@
   <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE---%E5%88%B9%E9%82%A3-08-19">rua阮阮 - 刹那</a></p> 
   <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE---%E5%88%9D%E6%81%8B%E7%BC%8E%E5%B8%A6-08-19">rua阮阮 - 初恋缎带</a></p> 
   <p><a href="http://telegra.ph/rua%E9%98%AE%E9%98%AE-%E5%B0%8F%E7%8B%97%E7%88%B1%E7%A5%9E10-08-21">rua阮阮 小狗爱神1.0</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E5%B0%8F%E4%B8%B8%E5%AD%90-88P-08-21">rua阮阮 小丸子 88P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
