--- a/咬人小小兔全集/menu.html
+++ b/咬人小小兔全集/menu.html
@@ -11,6 +11,9 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E9%AC%BC-%E5%8C%BB%E7%96%97%E5%85%94-%E6%A2%85%E9%87%8C78P1V-%E4%B8%8D%E5%BE%97%E4%B8%8D%E7%88%B1-7%E6%9C%88%E4%BD%9C%E5%93%81-08-21">咬人小小兔 『医疗兔-梅里』78P+1V 不得不爱 7月作品</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E6%9C%88%E7%A5%A8%E7%89%B9%E5%85%B8office%E4%B8%8B%E5%8D%88%E8%8C%B645P1V-Genie-08-21">咬人小小兔 6月月票特典『office下午茶』45P+1V Genie</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E4%BD%9C%E5%93%81%E6%98%9F%E7%A9%B9%E9%93%81%E9%81%93-%E8%8A%B1%E7%81%AB80P1V-%E5%A4%A7%E5%96%9C-08-21">咬人小小兔 6月作品『星穹铁道-花火』80P+1V 大喜</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E4%BD%9C%E5%93%81%E5%A4%B9%E5%BF%83%E9%A5%BC%E5%B9%B279P1V-Queen-card-08-21">咬人小小兔 6月作品『夹心饼干』79P+1V Queen card</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
