--- a/布丁大法 米布丁&油布丁全集/menu.html
+++ b/布丁大法 米布丁&油布丁全集/menu.html
@@ -37,7 +37,7 @@
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E8%A6%86%E7%9B%86%E5%AD%90%E8%93%9D%E7%99%BD%E6%9D%A1%E7%BA%B9%E5%96%B5-08-21">布丁 覆盆子蓝白条纹喵</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E8%A6%86%E7%9B%86%E5%AD%90%E7%9C%BC%E9%95%9C%E5%A8%98-08-21">布丁 覆盆子眼镜娘</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E4%B8%AD%E5%8D%8E%E5%A8%98-08-21">布丁 中华娘</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-%E7%B1%B3%E5%B8%83%E4%B8%81%E6%B2%B9%E5%B8%83%E4%B8%81-%E3%83%A9%E3%82%A4%E3%82%B9%E3%83%97%E3%83%87%E3%82%A3%E3%83%B3%E3%82%B0-36P1V-08-21">布丁大法 米布丁&油布丁 ライスプディング 36P1V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
