--- a/抱走莫子全集/menu.html
+++ b/抱走莫子全集/menu.html
@@ -15,5 +15,8 @@
   <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90---%E7%89%9B%E7%89%9B-41p16v-08-20">抱走莫子 - 牛牛 41p16v</a></p>
   <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90---%E5%9C%A3%E8%AF%9E%E5%BF%AB%E4%B9%90-08-20">抱走莫子 - 圣诞快乐</a></p>
   <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90---%E7%BA%A2%E8%89%B2%E5%B0%8F%E5%B0%BE%E5%B7%B4-120p25v-08-20">抱走莫子 - 红色小尾巴 120p25v</a></p>
+  <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90AA-%E9%97%B4%E8%B0%8D%E8%BF%87%E5%AE%B6%E5%AE%B6-%E7%BA%A6%E5%B0%94%E5%A4%AA%E5%A4%AA-52P18V-08-21">抱走莫子AA 间谍过家家 约尔太太 52P18V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
