--- a/神沢永莉全集/menu.html
+++ b/神沢永莉全集/menu.html
@@ -10,7 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%B2%A2%E6%B0%B8%E8%8E%89-%E9%A6%99%E8%8D%89%E8%8A%8B%E6%B3%A5-87P4V-445MB-08-21">神沢永莉 香草芋泥 [87P4V-445MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%A5%9E%E6%B2%A2%E6%B0%B8%E8%8E%89-%E5%88%AB%E5%BD%93%E6%AC%A7%E5%B0%BC%E9%85%B1%E5%95%A6-08-21">神沢永莉 别当欧尼酱啦</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
