--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -29,5 +29,14 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%B2%88%E5%A6%99%E6%B3%B3%E8%A3%85-08-21">九言 - 沈妙泳装</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%9F%B4%E9%83%A1%E9%83%A1-08-21">九言 - 柴郡郡</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%83%A1%E6%A1%83%E5%92%8C%E6%9C%8D-08-21">九言 胡桃（和服）</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E9%BB%91%E5%A4%A9%E9%B9%85-08-22">九言 黑天鹅</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%A8%9C%E7%BB%B4%E5%A8%85-6%E6%9C%88-08-22">九言 娜维娅 6月</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%8A%B1%E5%AB%81-08-22">九言 花嫁</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
