--- a/柒柒不可爱全集/menu.html
+++ b/柒柒不可爱全集/menu.html
@@ -9,6 +9,17 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./柒柒不可爱 - 春丽 100p （部分）/index.html">柒柒不可爱 - 春丽 100p （部分）</a></p> 
+  <p><a href="https://telegra.ph/%E6%9F%92%E6%9F%92%E4%B8%8D%E5%8F%AF%E7%88%B1-%E5%B0%8F%E7%81%B0%E5%85%94-71P1V-08-22">柒柒不可爱 小灰兔 71P1V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
