--- a/Sayo Momo全集/menu.html
+++ b/Sayo Momo全集/menu.html
@@ -13,7 +13,7 @@
   <p><a href="https://telegra.ph/Sayo-Momo-Hatsune-Miku-Rabbit-Hole-Video-08-21">Sayo Momo Hatsune Miku Rabbit Hole (Video)</a></p>
   <p><a href="https://telegra.ph/Sayo-Momo-Privaty-Unkind-Maid-NIKKE-08-21">Sayo Momo Privaty Unkind Maid (NIKKE)</a></p>
   <p><a href="https://telegra.ph/Sayo-Momo-cosplay-Pekomama-Vtuber-08-21">Sayo Momo cosplay Pekomama Vtuber</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Sayo-Momo-Navia-Genshin-Impact-08-22">Sayo Momo Navia (Genshin Impact)</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
