--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -48,7 +48,7 @@
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Set-A-%E8%93%9D%E5%85%94-Blue-Bunny--42P1V-08-21">玉汇 Set A 蓝兔 Blue Bunny [ 42P+1V ]</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Set-B-S%E7%BA%A7%E9%AD%85%E9%AD%94-Succubus-S--42P2V-08-21">玉汇 Set B S级魅魔 Succubus S [ 42P+2V ]</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87-%E7%BB%9D%E5%8C%BA%E9%9B%B6--%E8%89%BE%E8%8E%B2%E4%B9%94-136P1V-801B-08-21">yuuhui玉汇 绝区零 -艾莲·乔 [136P+1V-801B]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87-%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-124P2V-08-22">yuuhui玉汇 蔚蓝档案飞鸟马时 124P2V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
