--- a/九曲jean全集/menu.html
+++ b/九曲jean全集/menu.html
@@ -13,5 +13,9 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%9F%B4%E9%83%A1%E7%BB%9A%E7%83%82%E5%A4%9C%E6%A2%A6-40P-431MB-08-19">九曲Jean - 碧蓝航线 柴郡·绚烂夜梦 [40P-431MB]</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF%E8%8B%B1%E4%BB%99%E5%BA%A7%E6%8A%A4%E5%A3%AB-08-19">九曲Jean 碧蓝航线英仙座护士</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E4%BA%8C%E4%BD%90Nisa---%E9%BB%91%E7%B4%AB%E8%95%BE%E4%B8%9D%E5%A5%97-30p-2v-08-20">九曲Jean 二佐Nisa - 黑紫蕾丝套 30p 2v</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean%E4%BA%8C%E4%BD%90Nisa-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%8F%8C%E4%BA%BA%E7%A7%81%E6%88%BF%E5%B0%8F%E7%8C%AB-40P-08-22">九曲Jean&二佐Nisa 万圣节双人私房小猫 40P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
