--- a/二佐Nisa全集/menu.html
+++ b/二佐Nisa全集/menu.html
@@ -14,7 +14,7 @@
   <p><a href="https://telegra.ph/%E4%BA%8C%E4%BD%90Nisa-%E4%BA%A4%E9%94%99%E6%88%98%E7%BA%BF-%E5%8D%A1%E6%8F%90%E9%82%A3-36P-08-21">二佐Nisa 交错战线 卡提那 36P</a></p>
   <p><a href="https://telegra.ph/%E4%BA%8C%E4%BD%90Nisa-%E5%B0%8F%E9%AD%85%E9%AD%94%E7%AB%9E%E6%B3%B3-36P-08-21">二佐Nisa 小魅魔竞泳 36P</a></p>
   <p><a href="https://telegra.ph/%E4%BA%8C%E4%BD%90Nisa-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB%E7%A4%BC%E6%9C%8D-89P-08-21">二佐Nisa 恰巴耶夫礼服 89P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean%E4%BA%8C%E4%BD%90Nisa-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%8F%8C%E4%BA%BA%E7%A7%81%E6%88%BF%E5%B0%8F%E7%8C%AB-40P-08-22">九曲Jean&二佐Nisa 万圣节双人私房小猫 40P</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
