--- a/Sayo Momo(SayoMomo)全集/menu.html
+++ b/Sayo Momo(SayoMomo)全集/menu.html
@@ -14,6 +14,6 @@
   <p><a href="https://telegra.ph/Sayo-Momo-Privaty-Unkind-Maid-NIKKE-08-21">Sayo Momo Privaty Unkind Maid (NIKKE)</a></p>
   <p><a href="https://telegra.ph/Sayo-Momo-cosplay-Pekomama-Vtuber-08-21">Sayo Momo cosplay Pekomama Vtuber</a></p>
   <p><a href="https://telegra.ph/Sayo-Momo-Navia-Genshin-Impact-08-22">Sayo Momo Navia (Genshin Impact)</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/SayoMomo-Gamer-Girl-08-22">SayoMomo Gamer Girl</a></p>
 </body>
 </html>
