--- a/けん研(けんけん) eat me全集/menu.html
+++ b/けん研(けんけん) eat me全集/menu.html
@@ -10,5 +10,9 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E3%81%91%E3%82%93%E7%A0%94%E3%81%91%E3%82%93%E3%81%91%E3%82%93-eat-me---%E8%AF%9E%E7%94%9F%E6%97%A5%E8%AE%B0%E5%BF%B5DL-101P-115GB-08-19">けん研(けんけん) eat me - 诞生日记念DL [101P-1.15GB]</a></p> 
+  <p><a href="https://telegra.ph/%E3%81%91%E3%82%93%E7%A0%94-%E3%81%91%E3%82%93%E3%81%91%E3%82%93-Fantia-24%E5%B9%B406%E6%9C%88%E5%90%88%E9%9B%86-148P2V-08-22">けん研 (けんけん) Fantia 24年06月合集 148P2V 1</a></p>
+  <p><a href="https://telegra.ph/%E3%81%91%E3%82%93%E7%A0%94-%E3%81%91%E3%82%93%E3%81%91%E3%82%93-Fantia-24%E5%B9%B406%E6%9C%88%E5%90%88%E9%9B%86-148P2V-08-22-2">けん研 (けんけん) Fantia 24年06月合集 148P2V 2</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
