--- a/咬人小小兔全集/menu.html
+++ b/咬人小小兔全集/menu.html
@@ -13,6 +13,13 @@
   <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E6%9C%88%E7%A5%A8%E7%89%B9%E5%85%B8office%E4%B8%8B%E5%8D%88%E8%8C%B645P1V-Genie-08-21">咬人小小兔 6月月票特典『office下午茶』45P+1V Genie</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E4%BD%9C%E5%93%81%E6%98%9F%E7%A9%B9%E9%93%81%E9%81%93-%E8%8A%B1%E7%81%AB80P1V-%E5%A4%A7%E5%96%9C-08-21">咬人小小兔 6月作品『星穹铁道-花火』80P+1V 大喜</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E4%BD%9C%E5%93%81%E5%A4%B9%E5%BF%83%E9%A5%BC%E5%B9%B279P1V-Queen-card-08-21">咬人小小兔 6月作品『夹心饼干』79P+1V Queen card</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E4%BD%9C%E5%93%81%E5%B0%8F%E5%B0%8F%E5%85%94%E5%A4%A7%E5%8D%B1%E6%9C%BA73P1V-%E5%B0%8F%E5%89%A7%E5%9C%BA-08-22">咬人小小兔 6月作品『小小兔大危机』73P+1V 小剧场</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E4%BD%9C%E5%93%81%E5%A5%B6%E5%98%B4%E6%AD%BB%E5%BA%93%E6%B0%B472P1V-Gee-08-22">咬人小小兔 6月作品『奶嘴死库水』72P+1V Gee</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
