--- a/封疆疆全集/menu.html
+++ b/封疆疆全集/menu.html
@@ -27,8 +27,8 @@
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E9%98%BF%E5%B0%94%E6%AF%94%E6%81%A9%E6%97%97%E8%A2%8D-40P-08-21">封疆疆 阿尔比恩旗袍 40P</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E7%94%B3%E9%B9%A4%E6%B0%B4%E7%9D%80ver-08-21">封疆疆 申鹤水着ver (原神)</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E6%9F%B4%E9%83%A1%E9%AD%94%E6%9C%AF%E5%B8%88-%E7%BB%9A%E7%83%82%E5%A4%9C%E6%A2%A6-50P-08-22">封疆疆 柴郡魔术师 绚烂夜梦 50P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E5%8E%9F%E7%A5%9E-%E4%B9%85%E5%B2%90%E5%BF%8D-08-22">封疆疆 原神 久岐忍</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86v-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB-29P-08-22">封疆疆v 恰巴耶夫 29P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
