--- a/桃良阿宅全集/menu.html
+++ b/桃良阿宅全集/menu.html
@@ -21,6 +21,15 @@
   <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E5%A5%B3%E4%BB%86%E7%9A%84%E5%B0%8F%E6%86%A9-52P-08-21">桃良阿宅 女仆的小憩 52P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E5%81%9C%E8%BD%A6%E5%9C%BA-56P-08-21">桃良阿宅 停车场 56P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E5%A1%9E%E5%B0%94%E8%BE%BE-65P-08-21">桃良阿宅 塞尔达 65P</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E6%A1%83%E8%89%B2%E7%9A%84%E6%A2%A6-52P-08-22">桃良阿宅 桃色的梦 52P</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E5%BA%93%E5%B7%B4%E5%A7%AC-41P-08-22">桃良阿宅 库巴姬 41P</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%83%E8%89%AF%E9%98%BF%E5%AE%85-%E7%99%BD%E6%AF%9B%E8%A1%A3-65P-08-22">桃良阿宅 白毛衣 65P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
