--- a/沖田凛花(沖田凜花)全集/menu.html
+++ b/沖田凛花(沖田凜花)全集/menu.html
@@ -13,6 +13,16 @@
   <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9B%E8%8A%B1---Lynette-sweater-08-20">沖田凛花 - Lynette sweater</a></p>
   <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9B%E8%8A%B1-Toki-08-22">沖田凛花 Toki</a></p>
   <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9B%E8%8A%B1-Stocking-08-22">沖田凛花 Stocking</a></p>
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-Mashu-swimsuitpafamas-08-22">沖田凜花Rinka Mashu swimsuit&pafamas</a></p>
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-Nun-Fox-08-22">沖田凜花Rinka Nun Fox</a></p>
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-Devil-08-22">沖田凜花Rinka Devil</a></p>
+  <p><a href="http://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-Bride-08-22">沖田凜花Rinka Bride</a></p>
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-BlancWhiteRabbit-08-22">沖田凜花Rinka BlancWhiteRabbit</a></p>
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9C%E8%8A%B1Rinka-Bunny-Maid-08-22">沖田凜花Rinka Bunny Maid</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
