--- a/蜜汁猫裘全集/menu.html
+++ b/蜜汁猫裘全集/menu.html
@@ -21,7 +21,7 @@
   <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98-%E8%9B%87%E5%96%B0%E6%A2%A6%E5%AD%90-08-22">蜜汁猫裘 蛇喰梦子</a></p>
   <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98-%E6%99%AE%E5%88%A9%E8%8C%85%E6%96%AF-08-22">蜜汁猫裘 普利茅斯</a></p>
   <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98-%E7%B2%89%E9%BB%9B%E6%B1%89%E6%9C%8D-08-22">蜜汁猫裘 粉黛(汉服)</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%9C%9C%E6%B1%81%E7%8C%AB%E8%A3%98-2b-08-22">蜜汁猫裘 2b</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
