--- a/Nyako喵子全集/menu.html
+++ b/Nyako喵子全集/menu.html
@@ -9,9 +9,10 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E8%99%8E%E6%A3%AE%E6%A3%AE-%E9%BB%91%E4%B8%9D%E7%9C%BC%E9%95%9C%E5%A8%98-60P-08-21">虎森森 黑丝眼镜娘 60P</a></p>
-  <p><a href="https://telegra.ph/%E8%99%8E%E6%A3%AE%E6%A3%AE-%E8%A7%A6%E7%99%BD%E6%8A%A4%E5%A3%AB-60P-08-21">虎森森 触白护士 60P</a></p>
-  <p><a href="https://telegra.ph/%E8%99%8E%E6%A3%AE%E6%A3%AE-%E4%B8%8B%E7%8F%AD%E5%90%8E%E7%9A%84OL2-108P-08-22">虎森森 下班后的OL2 108P</a></p>
+  <p><a href="https://telegra.ph/Nyako%E5%96%B5%E5%AD%90-%E7%94%B5%E5%AD%90%E7%89%8854%E8%AF%B1%E6%8B%90%E6%9C%AC-08-22">Nyako喵子 电子版54诱拐本</a></p>  
+  <p><a href="https://telegra.ph/Nyako%E5%96%B5%E5%AD%90-%E7%94%B5%E5%AD%90%E7%89%8854-%E8%87%AA%E6%8B%8D-08-22">Nyako喵子 电子版54 自拍</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
