--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -32,8 +32,8 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E9%BB%91%E5%A4%A9%E9%B9%85-08-22">九言 黑天鹅</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%A8%9C%E7%BB%B4%E5%A8%85-6%E6%9C%88-08-22">九言 娜维娅 6月</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%8A%B1%E5%AB%81-08-22">九言 花嫁</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%A4%A7%E6%85%88%E6%A0%91%E7%8E%8B-%E5%8E%9F%E7%A5%9E-08-22">九言 大慈树王 (原神)</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%89%BE%E7%B1%B3%E8%8E%89%E4%BA%9A-08-22">九言 艾米莉亚</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
