--- a/日奈娇全集/menu.html
+++ b/日奈娇全集/menu.html
@@ -21,8 +21,8 @@
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%BE%8E%E6%9C%AF%E7%94%9F-129P5V-08-21">日奈娇 美术生 129P5V</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E8%8A%B1%E9%AD%81%E7%8B%90%E5%A6%96-08-21">日奈娇 花魁狐妖</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E6%B5%B7%E5%86%9B%E5%B0%91%E5%A5%B3-83P2V-08-21">日奈娇 海军少女 83P2V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E5%A5%B6%E5%A8%87%E6%97%A5%E5%B8%B8-157P4V-08-22">日奈娇 奶娇日常 157P4V</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E8%93%9D%E7%99%BD%E6%9D%A1-150P6V-08-22">日奈娇 蓝白条 150P6V</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%99%BD%E7%BA%B1%E8%A1%A3-136P4V-08-22">日奈娇 白纱衣 136P4V</a></p>
 </body>
 </html>
