--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -46,8 +46,8 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-C104%E7%92%83%E6%9C%88-08-21">水淼Aqua C104璃月(原神)</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-C104%E7%A8%BB%E5%A6%BB-08-21">水淼Aqua C104稻妻(原神)</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-%E6%9F%8A%E8%88%9E%E7%BC%87%E5%A8%9C-100P-08-21">水淼Aqua 柊舞缇娜 [100P]</a></p>
-<p><a href="../index.html">返回总目录</a></p>
-<p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-%E8%91%AC%E9%80%81%E7%9A%84%E8%8A%99%E8%8E%89%E8%8E%B2%E5%B0%A4%E8%B4%9D%E5%B0%94%E8%87%AA%E6%8B%8D126P-249M-08-22">水淼 葬送的芙莉莲尤贝尔+自拍[126P-249M]</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-%E5%B4%A9%E5%A3%8A%E3%82%B9%E3%82%BF%E3%83%BC%E3%83%AC%E3%82%A4%E3%83%AB-%E3%82%AB%E3%83%95%E3%82%AB-08-22">水淼Aqua 崩壊：スターレイル カフカ</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
